# GA_portfolio_optimization

./: README.md  market_analysis.py  plots.py  portfolio_ga.py  pyproject.toml  requirements.txt
